--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "rb-alert-proj",
-	"version": "0.0.0",
-	"description": "Rapid Build UI - Component Project: rb-alert",
+	"version": "0.0.1",
+	"description": "Rapid Build UI Web Component Project: rb-alert",
 	"license": "MIT",
 	"engines": {
 		"npm": "5.x",
