--- a/src/client/package.json
+++ b/src/client/package.json
@@ -1,8 +1,8 @@
 {
 	"name": "@rapid-build-ui/rb-alert",
-	"version": "0.0.0",
+	"version": "0.0.1",
 	"main": "scripts/rb-alert.js",
-	"description": "Rapid Build UI Component: rb-alert",
+	"description": "Rapid Build UI Web Component: rb-alert",
 	"license": "MIT",
 	"engines": {
 		"npm": "5.x",
@@ -34,6 +34,7 @@
 	},
 	"flat": true,
 	"dependencies": {
-		"@polymer/polymer": "next"
+		"@polymer/polymer": "next",
+		"@rapid-build-ui/rb-icon": "^0.0.1"
 	}
 }
