--- a/.travis.yml
+++ b/.travis.yml
@@ -49,7 +49,7 @@ jobs:
     - if: branch = continuous
       before_script:
         - rapid-build prod publish
-      after_success:
+      script:
         # Trigger Showcase Build
         - node scripts/travis/continuous $RB_COMPONENT_DIR $TRAVIS_TOKEN
 
