--- a/.travis.yml
+++ b/.travis.yml
@@ -49,9 +49,11 @@ jobs:
     # ==========
     - if: branch = continuous
       before_script:
-        - rapid-build prod publish
-      script:
+        # STEPS (in order)
+        # ================
+        # Build Component
         # Trigger Showcase Build
+        - rapid-build prod publish
         - node scripts/travis/continuous $RB_COMPONENT_DIR $TRAVIS_TOKEN $RB_REPO_NAME
 
     # Release
