--- a/package.json
+++ b/package.json
@@ -1,47 +1,16 @@
 {
-	"name": "rb-alert-proj",
-	"version": "0.0.3",
-	"description": "Rapid Build UI Web Component Project: rb-alert",
-	"license": "MIT",
-	"engines": {
-		"npm": "5.x",
-		"node": "8.x"
-	},
-	"contributors": [
-		{
-			"name": "Judd Younce",
-			"email": "jyounce@yahoo.com",
-			"url": "https://github.com/jyounce"
-		},
-		{
-			"name": "Yevgeniy Okun",
-			"email": "yevgeniyokun@gmail.com",
-			"url": "https://github.com/yokun"
-		},
-		{
-			"name": "Alina Younce",
-			"email": "crisan_alina2003@yahoo.com",
-			"url": "https://github.com/ayounce"
-		}
-	],
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/rapid-build-ui/rb-alert"
-	},
-	"bugs": {
-		"url": "https://github.com/rapid-build-ui/rb-alert/issues"
-	},
-	"scripts": {
-		"link": "cd dist/client/ && yarn link",
-		"unlink": "cd dist/client/ && yarn unlink",
-		"relink": "npm run link && npm run unlink && npm run link",
-		"install-client": "cd src/client/ && yarn install --ignore-engines",
-		"install-server": "cd src/server/ && npm install",
-		"setup": "npm run install-client && npm run install-server && rapid-build && npm run relink"
-	},
-	"dependencies": {
-		"colors": "^1.2.5",
-		"request": "^2.86.0",
-		"strip-ansi": "^4.0.0"
-	}
+  "name": "rb-alert-proj",
+  "scripts": {
+    "build-continuous": "node node_modules/@rapid-build-ui/utils/ci/build component continuous",
+    "build-release": "node node_modules/@rapid-build-ui/utils/ci/build component release",
+    "link": "cd dist/client/ && yarn link",
+    "unlink": "cd dist/client/ && yarn unlink",
+    "relink": "npm run link && npm run unlink && npm run link",
+    "install-client": "cd src/client/ && yarn install --ignore-engines",
+    "install-server": "cd src/server/ && npm install",
+    "setup": "npm run install-client && npm run install-server && rapid-build && npm run relink"
+  },
+  "dependencies": {
+    "@rapid-build-ui/utils": "*"
+  }
 }
