ci(docs): update comment in travis and update package-lock to use @rapid-build-ui/utils v0.0.5

--- a/.travis.yml
+++ b/.travis.yml
@@ -49,7 +49,7 @@ jobs:
       before_script:
         # build component
         # copy root files to: dist/client/ (ex: LICENSE)
-        # trigger showcase build
+        # trigger showcase ci build
         - npm run build-continuous
 
     # Release
